--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
