--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.12.0",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.7.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
