--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.12.0",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.7.11"
+    "sweetalert2": "^11.7.11",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
