--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
-    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-aos": "^1.0.1",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
